--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html,
 body {
     height: 100%;
     width: 100%;
-    font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .navbar-nav li {
