--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-/*---Media Queries --*/
+/*---Media Queries 
 
 @media (max-width: 992px) {}
 
 @media (max-width: 768px) {}
 
-@media (max-width: 576px) {}
+@media (max-width: 576px) {} --*/
 
 html,
 body {
@@ -216,7 +216,7 @@ footer {
 
 /*
 Extra small (xs) devices (portrait phones, less than 576px)
-No media query since this is the default in Bootstrap */
+No media query since this is the default in Bootstrap 
 
 Small (sm) devices (landscape phones,
 576px and up) @media (min-width: 576px) {
@@ -237,3 +237,4 @@ Extra (xl) large devices (large desktops,
 1200px and up) @media (min-width: 1200px) {
     ...
 }
+*/
