--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
     padding-top: 3cm;
     padding-left: 1cm;
     font-weight: bolder;
-    font-size: 7.5em;
+    font-size: 7.5vw;
     color: #000000;
 }
 
