--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
     font-size: 15pt;
     line-height: 25pt;
     text-align: middle;
-    padding-left: 3cm;
+    padding-left: 7.9vh;
 }
 
 .ap {
